objects/CRMforNonProfit__Contact_to_Process__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Certificate_Sending_Status__c</fullName>
        <label>Certificate Sending Status</label>
        <referenceTo>CRMforNonProfit__Certificate_Sending_Status__c</referenceTo>
        <relationshipLabel>Contacts to Process</relationshipLabel>
        <relationshipName>Contacts_to_Process</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Contact1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Replacement of master detail relationship because of managed package</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts to Process</relationshipLabel>
        <relationshipName>Contacts_to_Process1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Error__c</fullName>
        <description>Error message from batch processing</description>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Is_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Error</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact to Process</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>ContactToProcess Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts to Process</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>